# amplifier-module-hooks-project-isolation

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.amplifier/transcripts/: transcript_final_20251223_012224.jsonl  transcript_final_20251223_012257.jsonl
amplifier_module_hooks_project_isolation/: __init__.py
tests/: conftest.py  test_behavioral.py  test_validation.py
